--- a/docs/styles/range.css
+++ b/docs/styles/range.css
@@ -39,6 +39,8 @@
     padding-right: 0.5rem !important;
     padding-top: 0.25rem !important;
     padding-bottom: 0.25rem !important;
+    background: var(--bkg-color)!important;
+    color: var(--text-color)!important;
 }
 
 .noUi-handle:before, .noUi-handle:after{
